fixed alignment on cartIcon

--- a/src/css/CartIcon.module.css
+++ b/src/css/CartIcon.module.css
@@ -1,19 +1,22 @@
 .cartIcon {
   display: grid;
-  grid-template-columns: 70px 40px;
-  grid-template-rows: 20px 20px;
+  grid-template-columns: 60px;
+  grid-template-rows: 10px 20px 20px;
 }
 .cost {
   color: var(--secondary-color);
-  align-self: end;
-  grid-area: 1/1/3/3;
+  align-self: center;
+  grid-area: 1/1/1/1;
+  text-align: center;
+  font-size: 0.75rem;
 }
 
 .cart {
   margin: 0;
+  margin-top: 0.5rem;
   color: var(--primary-color);
   font-size: 40px;
-  grid-area: 1/2/3/2;
+  grid-area: 2/1/4/1;
   align-self: center;
   justify-self: center;
 }
@@ -22,8 +25,8 @@ svg {
 }
 .quantity {
   font-size: 0.8rem;
-  grid-area: 1/2/3/2;
-  margin: 0.35rem 0 0 0.5rem;
+  grid-area: 2/1/4/1;
+  margin: 0.4rem 0 0 0.5rem;
 
   align-self: start;
   justify-self: center;
